--- a/PythonDiscordBot/.env
+++ b/PythonDiscordBot/.env
@@ -1,4 +1,4 @@
 
 # .env
-DISCORD_TOKEN=NzM0MTM5MDUzOTEzNTM4NTYw.XxNaWQ.SM9DQU5Xii-qmkVwOQxT0jIIV_A  
+DISCORD_TOKEN=NzM0MTM5MDUzOTEzNTM4NTYw.XxNWRg._BdLvO0GE_44xK7cLkEM0vZMiE0  
 DISCORD_GUILD=97047740504084480
